[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Animation/Monster/Monster1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Animation/Monster/Monster3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Animation/Monster/Monster2.png" type="Texture" id=3]
[ext_resource path="res://scenes/FireMonster.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.51408, 20.3603 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Move",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 14.9552

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.65827, 20.9173 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.8145, 19.1911 )

[node name="FireMonster" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )
speed = 240.0
vector_damage = Vector2( 200, 600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.680588, 17.2051 )
shape = SubResource( 2 )

[node name="Anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Move"

[node name="Hit" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2( 11.8697, -24.6489 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hit"]
position = Vector2( 14.8529, 16.0803 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hit"]
position = Vector2( -14.4733, 18.5585 )
shape = SubResource( 5 )

[node name="Wall" type="RayCast2D" parent="."]
position = Vector2( 24, 18.5585 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="Floor" type="RayCast2D" parent="."]
position = Vector2( 32.6991, 34.8268 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
